--- a/tags.html
+++ b/tags.html
@@ -76,10 +76,13 @@
     </style>
 </head>
 <body>
-    <center >
-        <input id="taginputs" type="text" style="line-height: 50vh;"><br>
+    <center style="line-height: 50vh;x">
+        <input id="taginputs" type="text" style="height:20px">
+    </center>
+    <br>
+    <center>        
         <div id="output"></div>
-    </center>    
+    </center>
 </body>
 
 <script src="jquery-3.4.1.min.js"></script>
@@ -97,8 +100,11 @@
 
         $('#output').html('');
         for (let item of TAGS){
-            if (item != ''){                
-            $('#output').append(`<span class='tag'>${item}</span>`);
+            if (item != ''){
+                //Filter for improper middle spaces
+                let _ = item.replace(/\s{2,}/g, ' ');
+                //_ = item.replace(/\s+/g, ' ');
+                $('#output').append(`<span class='tag'>${_}</span>`);
             }            
         }
     })
